# arbor

./: .gitignore  .npmrc  CLAUDE.md  CLI-STRATEGY.md  CONVENTIONS.md  DECISIONS.md  PLAN.md  README.md  VISION.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
apps/aster-rs/: Cargo.toml  EVOLUTION.md
apps/aster-rs/crates/aster-adapters/: Cargo.toml
apps/aster-rs/crates/aster-application/: Cargo.toml
apps/aster-rs/crates/aster-domain/: Cargo.toml
apps/aster-rs/crates/aster-markdown/: Cargo.toml
apps/aster-rs/crates/aster-tui/: Cargo.toml
apps/aster-rs/crates/ofsh/: Cargo.toml
apps/aster-rs/src/: api.rs  chat.rs  main.rs  markdown.rs
apps/capture/src-tauri/: Cargo.toml  README.md  tauri.conf.json
apps/capture/src-tauri/capabilities/: default.json
apps/capture/src-tauri/icons/: README.md
apps/capture/src-tauri/src/: README.md  main.rs
apps/clipdock/: Cargo.toml  README.md
apps/clipdock/docs/: architecture.md  product.md  test-spec.md
apps/clipdock/src/: main.rs
apps/clipdock/src/app/: error.rs  history.rs  layout.rs  mod.rs  model.rs
apps/clipdock/src/platform/: mod.rs
apps/gen3-game/: Cargo.toml
apps/gen3-game/crates/battle-application/: Cargo.toml
apps/gen3-game/crates/battle-ramus-adapter/: Cargo.toml
apps/gen3-game/crates/battle-vsh-adapter/: Cargo.toml
apps/gen3-game/crates/game-asset-plan/: Cargo.toml
apps/gen3-game/crates/game-assets/: Cargo.toml
apps/gen3-game/crates/game-data-import/: Cargo.toml
apps/gen3-game/crates/game-data-import-core/: Cargo.toml
apps/gen3-game/crates/game-e2e/: Cargo.toml
apps/gen3-game/crates/game-fs-assets/: Cargo.toml
apps/gen3-game/crates/game-host/: Cargo.toml
apps/gen3-game/crates/game-native-target/: Cargo.toml
apps/gen3-game/crates/game-scene-view/: Cargo.toml
apps/gen3-game/crates/game-session/: Cargo.toml
apps/gen3-game/crates/game-ui/: Cargo.toml
apps/gen3-game/crates/game-view/: Cargo.toml
apps/gen3-game/crates/map-editor/: Cargo.toml
apps/gen3-game/crates/map-editor-view/: Cargo.toml
apps/gen3-game/crates/map-render/: Cargo.toml
apps/gen3-game/crates/world-application/: Cargo.toml
apps/gen3-game/docs/: architecture-gates.md  battle-session-design.md  game-data-import-design.md  gen3-stat-projection-design.md  map-editor-design.md  map-editor-usage.md  presentation-architecture.md  state-and-effects-migration-plan.md  weather-system-design.md
apps/gen3-game/scripts/: Split-IconStrip.ps1  Test-Battle.ps1  convert_iee_icon.py  diagnose_platinum_sprites.py  extract_character_sprite_atlas.py  extract_map_tileset.py  make_sprite_background_transparent.py  normalize_platinum_sprites.py  platinum_sprite_common.py  split_pokemon_icon_frames.py  test_architecture.py  test_quality.py  test_quality_test.py
apps/memvfs/: Cargo.toml  README.md
apps/memvfs/crates/memvfs-cli/: Cargo.toml
apps/memvfs/crates/memvfs-core/: Cargo.toml
apps/memvfs/crates/memvfsd/: Cargo.toml
apps/punctum/: Cargo.toml  README.md
apps/punctum/crates/punctum-gpu/: Cargo.toml
apps/punctum/crates/punctum-terminal/: Cargo.toml
apps/punctum/peps/: 0000-pep-process.md  0001-punctum-technical-direction.md  README.md
apps/shamrock/: .gitignore  Cargo.toml  README.md
apps/shamrock/crates/battle-cli/: Cargo.toml
apps/shamrock/crates/battle-core/: Cargo.toml
apps/shamrock/crates/battle-data/: Cargo.toml
apps/shamrock/crates/battle-format/: Cargo.toml
apps/shamrock/crates/battle-mechanics/: Cargo.toml
apps/shamrock/crates/battle-replay/: Cargo.toml
apps/shamrock/crates/battle-view/: Cargo.toml
apps/shamrock/docs/: README.md
apps/shamrock/docs/architecture/: README.md  overview.md  runtime-logging.md  system-design.md
apps/shamrock/docs/current/: README.md  roadmap.md  status.md
apps/shamrock/docs/defects/: README.md  core-model-gaps.md  engineering-gaps.md  index.md  replay-gaps.md  view-layer-gaps.md
apps/shamrock/docs/reference/: README.md  collaboration-rules.md  comment-rules.md  engineering-rules.md  file-split-plan.md
apps/shamrock/docs/systems/: README.md  ai-script-battle.md  battle-cli-tui.md
apps/shamrock/packs/gen1-demo/: data-pack.json  opponent-team.json  player-team.json
apps/shamrock/replays/: first-playable-demo.json
apps/tetris/: Cargo.toml  README.md
apps/tetris/examples/: palette_overlay_contract.rs  ramus_palette_contract.rs
apps/tetris/examples/gpu/: agent_planner.rs  autoplay.rs  main.rs  ollama_planner.rs  palette_overlay.rs  ramus_palette.rs  view.rs
apps/tetris/examples/terminal/: main.rs  view.rs
apps/tetris/scripts/: check-pure-coverage.ps1
apps/tetris/src/: lib.rs
apps/tetris/tests/: tetris_contract.rs
apps/thorn/: Cargo.toml  README.md
apps/thorn/crates/thorn/: Cargo.toml
apps/thorn/crates/thorn-core/: Cargo.toml
apps/thorn/crates/thorn-headless/: Cargo.toml
apps/thorn/crates/thorn-runtime/: Cargo.toml
apps/thorn/crates/thorn-terminal/: Cargo.toml
apps/thorn/crates/thorn-win32/: Cargo.toml
apps/thorn/docs/: aster-agent-integration.md  thep-compliance-matrix.md  win32-backend-slice.md
apps/thorn/docs/THEPs/: README.md  THEP-0001-thep-process.md  THEP-0001-thorn-purpose.md  THEP-0002-project-architecture.md  THEP-0002-ui-layer-model.md  THEP-0003-component-and-element.md  THEP-0003-reactivity-scope.md  THEP-0004-host-tree.md  THEP-0004-view-primitive-tree.md  THEP-0005-flex-layout-subset.md  THEP-0005-state-action-runtime.md  THEP-0006-theme-system.md  THEP-0006-tree-transformation-pipeline.md  THEP-0007-layout-model.md  THEP-0007-terminal-rendering.md  THEP-0008-mvp-slice.md  THEP-0008-paint-and-backend.md  THEP-0009-optimization-and-observability.md  THEP-0009-performance-observability.md  (+6 more)
apps/tui-chater/: Cargo.toml
apps/tui-framework/: AGENTS.md  Cargo.toml
apps/tui-framework/docs/: arbor-tui使用最佳实践.md  arbor-tui开发最佳实践.md  arbor-tui终态使用者视角.md  perf-optimization-report-2026-07-06.md  perf-optimization-report-tep0008-2026-07-06.md  perf-optimization-report-tep0009-protocol-2026-07-06.md  性能水位.md  设计实现偏差分析.md
apps/tui-framework/tep-ops/: __init__.py  __main__.py  config.json
(+669 files in other folders)
