[package]
name = "aster-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["nyml"]
publish = false

[[bin]]
name = "aster"
path = "src/main.rs"

[dependencies]
# TUI framework
arbor-tui = { path = "../tui-framework/crates/arbor-tui" }
arbor-tui-primitives = { path = "../tui-framework/crates/arbor-tui-primitives" }
arbor-tui-reactive = { path = "../tui-framework/crates/arbor-tui-reactive" }
arbor-tui-render = { path = "../tui-framework/crates/arbor-tui-render" }
arbor-tui-widget = { path = "../tui-framework/crates/arbor-tui-widget" }
arbor-tui-backend = { path = "../tui-framework/crates/arbor-tui-backend" }
arbor-tui-widgets = { path = "../tui-framework/crates/arbor-tui-widgets" }
crossterm = "0.28"

# HTTP + SSE streaming
ureq = { version = "3", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"

# Markdown parsing
pulldown-cmark = "0.12"

# Syntax highlighting (code blocks)
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
