[workspace]
members = [
    "crates/aster-domain",
    "crates/aster-application",
    "crates/aster-adapters",
    "crates/aster-markdown",
    "crates/aster-tui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["nyml"]
publish = false

[workspace.dependencies]
aster-domain = { path = "crates/aster-domain" }
aster-application = { path = "crates/aster-application" }
aster-adapters = { path = "crates/aster-adapters" }
aster-markdown = { path = "crates/aster-markdown" }

arbor-tui-domain = { path = "../tui-framework/crates/arbor-tui-domain" }
arbor-tui-application = { path = "../tui-framework/crates/arbor-tui-application" }
arbor-tui-adapters = { path = "../tui-framework/crates/arbor-tui-adapters" }
arbor-tui-runtime = { path = "../tui-framework/crates/arbor-tui-runtime" }
arbor-tui-widgets = { path = "../tui-framework/crates/arbor-tui-widgets" }
arbor-tui-testing = { path = "../tui-framework/crates/arbor-tui-testing" }

anyhow = "1"
pulldown-cmark = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
thiserror = "2"
ureq = { version = "3", features = ["json"] }

[workspace.lints.rust]
unsafe_code = "deny"
unused_qualifications = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
