[package]
name = "clipdock"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
arbor-ui-core = { path = "../../packages/arbor-ui-core" }
arbor-ui-windows = { path = "../../packages/arbor-ui-windows" }
thiserror = "2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_System_DataExchange",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_System_Ole",
  "Win32_UI_HiDpi",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }
