[workspace]
members = [
    "crates/punctum-gpu",
    "crates/punctum-grid",
    "crates/punctum-input",
    "crates/punctum-terminal",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.88"

[workspace.dependencies]
punctum-grid = { path = "crates/punctum-grid" }
punctum-input = { path = "crates/punctum-input" }
