[package]
name = "punctum-tetris"
version = "0.0.0"
edition = "2024"
license = "MIT"
rust-version = "1.88"

[dependencies]
punctum-grid = { path = "../punctum/crates/punctum-grid" }
punctum-input = { path = "../punctum/crates/punctum-input" }

[dev-dependencies]
punctum-crossterm = { path = "../punctum/crates/punctum-crossterm" }
punctum-gpu = { path = "../punctum/crates/punctum-gpu" }
punctum-terminal = { path = "../punctum/crates/punctum-terminal" }
punctum-wgpu = { path = "../punctum/crates/punctum-wgpu" }
pollster = "0.4.0"
wgpu = "30.0.0"
winit = "0.30.13"

[[example]]
name = "gpu"
path = "examples/gpu/main.rs"
test = true

[lib]
path = "src/lib.rs"
