[workspace]
members = [
    "crates/thorn-core",
    "crates/thorn-runtime",
    "crates/thorn-headless",
    "crates/thorn-terminal",
    "crates/thorn-win32",
    "crates/thorn",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["nyml"]

[workspace.lints.rust]
unsafe_code = "deny"
unused_qualifications = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
