[workspace]
members = [
    "crates/chat-application",
    "crates/chater-e2e",
    "crates/chater-ui",
    "crates/model-adapter",
    "crates/tui-host",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.88"

[workspace.dependencies]
punctum-grid = { path = "../punctum/crates/punctum-grid" }
punctum-input = { path = "../punctum/crates/punctum-input" }
punctum-terminal = { path = "../punctum/crates/punctum-terminal" }

