[workspace]
members = [
    "crates/arbor-tui-core",
    "crates/arbor-tui-backend",
    "crates/arbor-tui",
    "crates/arbor-tui-examples",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["nyml"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
