[workspace]
members = [
    "crates/arbor-tui",
    "crates/arbor-tui-domain",
    "crates/arbor-tui-markdown",
    "crates/arbor-tui-application",
    "crates/arbor-tui-adapters",
    "crates/arbor-tui-widgets",
    "crates/arbor-tui-composites",
    "crates/arbor-tui-testing",
    "crates/arbor-tui-runtime",
    "crates/arbor-tui-examples",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["nyml"]

[workspace.lints.rust]
unsafe_code = "deny"
unused_qualifications = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
# unwrap_used / expect_used are intentionally NOT denied —
# this project follows "let it crash": .expect("why") is the
# standard mechanism for enforcing invariants at runtime.

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
