[package]
name = "capture"
version = "0.1.0"
description = "Capture desktop screenshot tool shell"
edition = "2021"
publish = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
image = "0.25"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2.3.2"

[target.'cfg(target_os = "windows")'.dependencies]
arboard = "3.6.1"
half = "2.7.1"
scopeguard = "1.2"
windows = { version = "0.62", features = [
  "Foundation",
  "Graphics_Capture",
  "Graphics_DirectX_Direct3D11",
  "Win32_Devices",
  "Win32_Devices_Display",
  "Win32_Foundation",
  "Win32_Graphics_Direct3D",
  "Win32_Graphics_Direct3D11",
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Dxgi_Common",
  "Win32_Graphics_Gdi",
  "Win32_UI",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_WinRT_Direct3D11",
  "Win32_System_WinRT_Graphics_Capture",
] }
