[package]
name = "aster-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
aster-application.workspace = true
aster-domain.workspace = true
serde.workspace = true
serde_json.workspace = true
ureq.workspace = true
