[package]
name = "aster-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[lints]
workspace = true

[[bin]]
name = "aster"
path = "src/main.rs"

[dependencies]
aster-adapters.workspace = true
aster-application.workspace = true
aster-domain.workspace = true
aster-markdown.workspace = true
arbor-tui-application.workspace = true
arbor-tui-domain.workspace = true
arbor-tui-runtime.workspace = true
arbor-tui-widgets.workspace = true
anyhow.workspace = true

[dev-dependencies]
arbor-tui-testing.workspace = true
