[package]
name = "game-data-import"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
csv = "1.4.0"
game-data = { path = "../game-data" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[[bin]]
name = "game-data-import"
path = "src/main.rs"
