[package]
name = "game-e2e"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
battle-application = { path = "../battle-application" }
game-host = { path = "../game-host" }
punctum-input = { workspace = true }
world-application = { path = "../world-application" }

[lib]
path = "src/lib.rs"
