[package]
name = "game-host"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
battle-application = { path = "../battle-application" }
game-ui = { path = "../game-ui" }
glyphon = "0.12.0"
pollster = "0.4.0"
punctum-gpu = { workspace = true }
punctum-grid = { workspace = true }
punctum-input = { workspace = true }
punctum-wgpu = { path = "../../../punctum/crates/punctum-wgpu" }
wgpu = "30.0.0"
winit = "0.30.13"

[lib]
path = "src/lib.rs"
