[package]
name = "game-host"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
battle-application = { path = "../battle-application" }
battle-ramus-adapter = { path = "../battle-ramus-adapter" }
game-assets = { path = "../game-assets" }
game-data = { path = "../game-data" }
game-ui = { path = "../game-ui" }
glyphon = "0.12.0"
nucleo-matcher = "0.3.1"
pollster = "0.4.0"
punctum-gpu = { workspace = true }
punctum-grid = { workspace = true }
punctum-input = { workspace = true }
punctum-wgpu = { path = "../../../punctum/crates/punctum-wgpu" }
wgpu = "30.0.0"
winit = "0.30.13"
world-application = { path = "../world-application" }

[lib]
path = "src/lib.rs"
