[package]
name = "game-ui"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
battle-session = { workspace = true }
game-assets = { path = "../game-assets" }
map-render = { workspace = true }
punctum-gpu = { workspace = true }
punctum-grid = { workspace = true }
punctum-input = { workspace = true }
world-application = { path = "../world-application" }

[lib]
path = "src/lib.rs"

[dev-dependencies]
battle-application = { workspace = true }
