[package]
name = "map-editor"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
game-assets = { path = "../game-assets" }
game-fs-assets = { path = "../game-fs-assets" }
game-native-target = { path = "../game-native-target" }
map-assets = { path = "../map-assets" }
map-editor-core = { path = "../map-editor-core" }
map-editor-view = { path = "../map-editor-view" }
map-project = { workspace = true }
map-render = { workspace = true }
punctum-gpu = { workspace = true }
winit = "0.30.13"

[[bin]]
name = "map-editor"
path = "src/main.rs"
