[package]
name = "punctum-terminal"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
crossterm = "0.29.0"
punctum-grid = { workspace = true }
punctum-input = { workspace = true }
unicode-segmentation = "1.13.3"
unicode-width = "0.2.2"

[lib]
path = "src/lib.rs"
