[package]
name = "battle-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
battle-core = { path = "../battle-core" }
battle-data = { path = "../battle-data" }
battle-format = { path = "../battle-format" }
battle-view = { path = "../battle-view" }
battle-replay = { path = "../battle-replay" }
crossterm = "0.28"
ratatui = "0.29"
supports-color = "3.0"
