[package]
name = "thorn-terminal"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
crossterm = { version = "0.29", default-features = false, features = ["events", "windows"] }
thorn-core = { path = "../thorn-core" }
thorn-runtime = { path = "../thorn-runtime" }

[lib]
path = "src/lib.rs"

[lints]
workspace = true
