[package]
name = "thorn"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
thorn-core = { path = "../thorn-core" }
thorn-headless = { path = "../thorn-headless" }
thorn-runtime = { path = "../thorn-runtime" }
thorn-terminal = { path = "../thorn-terminal" }

[lib]
path = "src/lib.rs"

[lints]
workspace = true
