[package]
name = "arbor-tui-application"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
arbor-tui-domain = { path = "../arbor-tui-domain" }
anyhow = "1"

[dev-dependencies]
arbor-tui-adapters = { path = "../arbor-tui-adapters" }
arbor-tui-widgets = { path = "../arbor-tui-widgets" }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
