[package]
name = "arbor-tui-backend"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
arbor-tui-core = { path = "../arbor-tui-core" }
crossterm = { version = "0.28", optional = true }
thiserror = "2"

[features]
default = ["crossterm"]
crossterm = ["dep:crossterm"]
simulated = []
