[package]
name = "arbor-tui-composites"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
arbor-tui-domain = { path = "../arbor-tui-domain" }
arbor-tui-widgets = { path = "../arbor-tui-widgets" }

[dev-dependencies]
arbor-tui-testing = { path = "../arbor-tui-testing" }
