[package]
name = "arbor-tui-examples"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true

[[bin]]
name = "layout_demo2"
path = "src/bin/layout_demo2.rs"

[dependencies]
arbor-tui-application = { path = "../arbor-tui-application" }
arbor-tui-domain = { path = "../arbor-tui-domain" }
arbor-tui-adapters = { path = "../arbor-tui-adapters" }
arbor-tui-widgets = { path = "../arbor-tui-widgets" }
crossterm = "0.28"
anyhow = "1"

[dev-dependencies]
arbor-tui-testing = { path = "../arbor-tui-testing" }
