[package]
name = "arbor-tui-examples"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true

[[bin]]
name = "layout_demo2"
path = "src/bin/layout_demo2.rs"

[dependencies]
arbor-tui-domain = { path = "../arbor-tui-domain" }
arbor-tui-widgets = { path = "../arbor-tui-widgets" }
arbor-tui-composites = { path = "../arbor-tui-composites" }
arbor-tui-runtime = { path = "../arbor-tui-runtime" }
anyhow = "1"

[dev-dependencies]
arbor-tui-testing = { path = "../arbor-tui-testing" }
