[package]
name = "arbor-tui-markdown"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
arbor-tui-domain = { path = "../arbor-tui-domain" }
pulldown-cmark = "0.12"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
