[package]
name = "arbor-tui-testing"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
arbor-tui-domain = { path = "../arbor-tui-domain" }
arbor-tui-application = { path = "../arbor-tui-application" }
arbor-tui-adapters = { path = "../arbor-tui-adapters", features = ["simulated"] }
arbor-tui-widgets = { path = "../arbor-tui-widgets" }
anyhow = "1"
